--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://assetchain-telegram-app.vercel.app/",
     "name": "FortuneTap",
-    "iconUrl": "https://lonewolf2580.github.io/img/profile.jpg"
+    "iconUrl": "https://lonewolf2580.github.io/img/mani-logo.jpg"
 }
